@@ -1,6 +1,6 @@
-3.11.2+rc1
+3.11.2
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
 
-# $Id: VERSION 9500 2009-12-28 13:13:23Z doligez $
+# $Id: VERSION 9537 2010-01-20 12:19:26Z doligez $
