@@ -12,13 +12,14 @@
 #                                                                       #
 #########################################################################
 
-# $Id: mkmyocamlbuild_config.sh 8768 2008-01-11 16:13:18Z doligez $
+# $Id: mkmyocamlbuild_config.sh 9520 2010-01-11 14:34:40Z doligez $
 
 cd `dirname $0`/..
 
 sed \
     -e 's/^.*FLEXDIR.*$//g' \
     -e 's/^#ml \(.*\)/\1/' \
+    -e 's/^\([^"][^"]*\("[^"]*"[^"]*\)*\)#.*$/\1/' \
     -e 's/^\(#.*\)$/(* \1 *)/' \
     -e 's/^\(.*\$([0-9]).*\)$/(* \1 *)/' \
     -e 's/^\([^(=]*\)=\([^"]*\)$/let <:lower<\1>> = "\2";;/' \
