@@ -11,7 +11,7 @@
 #                                                                       #
 #########################################################################
 
-# $Id: Makefile.mingw 9124 2008-11-09 09:44:24Z xleroy $
+# $Id: Makefile.mingw 9508 2010-01-04 15:52:44Z xleroy $
 
 # Configuration for Windows, Mingw compiler
 
@@ -145,11 +145,11 @@ BNG_ARCH=ia32
 BNG_ASM_LEVEL=1
 
 ### Configuration for LablTk
-# Set TK_ROOT to the directory where you installed TCL/TK 8.4
+# Set TK_ROOT to the directory where you installed TCL/TK 8.5
 # There must be no spaces or special characters in $(TK_ROOT)
 TK_ROOT=c:/tcl
 TK_DEFS=-I$(TK_ROOT)/include
-TK_LINK=$(TK_ROOT)/bin/tk84.dll $(TK_ROOT)/bin/tcl84.dll -lws2_32
+TK_LINK=$(TK_ROOT)/bin/tk85.dll $(TK_ROOT)/bin/tcl85.dll -lws2_32
 
 ############# Aliases for common commands
 
