@@ -10,7 +10,7 @@
 #                                                                       #
 #########################################################################
 
-# $Id: Makefile.shared 9300 2009-06-18 11:17:16Z xclerc $
+# $Id: Makefile.shared 9529 2010-01-15 09:20:00Z doligez $
 
 include ../config/Makefile
 
@@ -99,7 +99,8 @@ clean::
 	$(CAMLC) -c $(COMPFLAGS) $<
 
 depend: beforedepend
-	$(CAMLDEP) $(DEPFLAGS) *.mli *.ml > .depend
+	$(CAMLDEP) $(DEPFLAGS) *.mli *.ml \
+	| sed -e 's,$(UNIXDIR)/,$$(UNIXDIR)/,' > .depend
 
 lexer.ml: lexer.mll
 	$(CAMLLEX) lexer.mll
