@@ -6,6 +6,7 @@ dumpobj
 dumpapprox
 objinfo
 cvt_emit
+cvt_emit.bak
 cvt_emit.ml
 ocamlcp
 ocamlmktop
